# ros2_3dslam_ws

docs/issues_and_fixes/: issues_and_fixes.md
docs/superpowers/plans/: 2026-03-29-amr-motion-test-gui.md
src/ACS/Waypoint-System/: README.md
src/ACS/Waypoint-System/acs_waypoint_gui/launch/: acs_gazebo_full.launch.py
src/Control/AMR-Motion-Control/amr_motion_control_2wd/src/: translate_reverse_action_server.cpp  yaw_control_action_server.cpp
src/Control/AMR-Motion-Control/amr_motion_test_ui/: package.xml  setup.py
src/Control/AMR-Motion-Control/amr_motion_test_ui/amr_motion_test_ui/: gui_node.py  process_manager.py  ros_bridge.py
src/Control/AMR-Motion-Control/amr_motion_test_ui/launch/: test_gui.launch.py
src/Gazebo/launch/: gazebo.launch.py
src/Gazebo/models/pioneer2dx/: model.sdf
src/Gazebo/worlds/: my_world.sdf
src/Mapper/mapper/: CMakeLists.txt  package.xml
src/Mapper/mapper/config/: mapper_params.yaml
src/Mapper/mapper/include/mapper/: exploration_planner_node.hpp  mapper_orchestrator_node.hpp  wall_aligner_node.hpp
src/Mapper/mapper/src/: exploration_planner_node.cpp  main_orchestrator.cpp  main_wall_aligner.cpp  map_alignment_checker_node.cpp  mapper_orchestrator_node.cpp  wall_aligner_node.cpp
src/Mapper/mapper/test/: test_integration_gazebo.py  test_orchestrator_states.cpp  test_wall_aligner.cpp
src/Mapper/mapper_interfaces/: package.xml
src/Mapper/mapper_ui/: package.xml
src/Mapper/mapper_ui/mapper_ui/: mapper_ui_node.py  ros_bridge.py
src/Mapper/mapper_ui/ui/: mapper_main.ui
src/Nav2/nav2_bringup_3dslam/: CMakeLists.txt  package.xml
src/Nav2/nav2_bringup_3dslam/docs/: usage.md
src/Nav2/nav2_bringup_3dslam/launch/: nav2_full_bringup.launch.py  nav2_only.launch.py
src/Nav2/nav2_bringup_3dslam/rviz2/: nav2.rviz
src/Planner/Nav2/nav2_smac_hybrid/config/: smac_hybrid_params.yaml
src/Planner/ODD/Global/route_graph_builder/docs/: run_commands.md
src/SLAM/2D_SLAM/Cartographer/: CMakeLists.txt
src/SLAM/2D_SLAM/Cartographer/docs/: Cartographer_run_commands.md
src/SLAM/2D_SLAM/Cartographer/launch/localization/: cartographer_localization.launch.py
src/SLAM/2D_SLAM/Cartographer/launch/slam/: cartographer_slam.launch.py
src/SLAM/2D_SLAM/SLAMBOX/docs/: SLAMBOX_run_commands.md
src/SLAM/2D_SLAM/rtab_map/docs/: RTABMap_run_commands.md
src/SLAM/2D_SLAM/rtab_map/launch/localization/: rtabmap_2d_lidar_rgbd_localization.launch.py  rtabmap_lidar_localization.launch.py
src/SLAM/2D_SLAM/rtab_map/launch/slam/: rtabmap_2d_lidar_rgbd_slam.launch.py  rtabmap_lidar_slam.launch.py
src/SLAM/3D_SLAM/LIO-SAM/livox_lio_sam/: CMakeLists.txt
src/SLAM/3D_SLAM/LIO-SAM/livox_lio_sam/config/: params_localization_gazebo.yaml  params_slam_gazebo.yaml
src/SLAM/3D_SLAM/LIO-SAM/livox_lio_sam/docs/: lio_sam_run_commands.md
src/SLAM/3D_SLAM/LIO-SAM/livox_lio_sam/include/livox_lio_sam/: utility.hpp
src/SLAM/3D_SLAM/LIO-SAM/livox_lio_sam/launch/localization/: run_localization.launch.py  run_localization_gazebo.launch.py
src/SLAM/3D_SLAM/LIO-SAM/livox_lio_sam/launch/slam/: run_slam.launch.py  run_slam_gazebo.launch.py
src/SLAM/3D_SLAM/LIO-SAM/livox_lio_sam/src/: imageProjection.cpp  mapOptmization.cpp
src/SLAM/3D_SLAM/cartographer_slam_3d/: CMakeLists.txt  package.xml
src/SLAM/3D_SLAM/cartographer_slam_3d/config/: cartographer_3d.lua  cartographer_3d_localization.lua
src/SLAM/3D_SLAM/cartographer_slam_3d/docs/: cartographer_3d_run_commands.md
src/SLAM/3D_SLAM/cartographer_slam_3d/launch/localization/: cartographer_3d_localization_gazebo.launch.py
src/SLAM/3D_SLAM/cartographer_slam_3d/launch/slam/: cartographer_3d_slam_gazebo.launch.py
src/SLAM/3D_SLAM/cartographer_slam_3d/rviz/: cartographer_3d.rviz
src/SLAM/3D_SLAM/cartographer_slam_3d/scripts/: imu_qos_relay.py  map_cloud_accumulator.py
src/SLAM/3D_SLAM/rtab_map_3d/: CMakeLists.txt  package.xml
src/SLAM/3D_SLAM/rtab_map_3d/docs/: rtab_map_3d_run_commands.md
src/SLAM/3D_SLAM/rtab_map_3d/launch/localization/: rtabmap_2dlidar_rgbd_localization_gazebo.launch.py  rtabmap_3dlidar_only_localization_gazebo.launch.py  rtabmap_3dlidar_rgb_localization_gazebo.launch.py  rtabmap_3dlidar_rgbd_localization_gazebo.launch.py  rtabmap_livox_rgbd_localization_gazebo.launch.py  rtabmap_rgbd_localization_gazebo.launch.py
src/SLAM/3D_SLAM/rtab_map_3d/launch/slam/: rtabmap_2dlidar_rgbd_slam_gazebo.launch.py  rtabmap_3dlidar_only_slam_gazebo.launch.py  rtabmap_3dlidar_rgb_slam_gazebo.launch.py  rtabmap_3dlidar_rgbd_slam_gazebo.launch.py  rtabmap_astra_3d_slam_gazebo.launch.py  rtabmap_livox_rgbd_slam_gazebo.launch.py  rtabmap_rgbd_slam_gazebo.launch.py
src/SLAM/SLAM_Manager/2D/: package.xml
src/SLAM/SLAM_Manager/2D/slam_manager_2d/: slam_manager_2d_node.py
src/SLAM/SLAM_Manager/3D/slam_manager_3d/: package.xml
src/SLAM/SLAM_Manager/3D/slam_manager_3d/docs/: run.md  slam_manager_3d_code_updates.md
src/SLAM/SLAM_Manager/3D/slam_manager_3d/slam_manager_3d/: slam_manager_3d_node.py  slam_manager_3d_ui.py
src/SLAM/SLAM_Manager/3D/slam_manager_3d/slam_manager_3d/ui/: slam_manager_3d.ui
waypoints/: job_test_drive_modes1.txt
