<?xml version="1.0"?>
<package format="3">
  <name>mapper</name>
  <version>0.1.0</version>
  <description>SLAM Mapper C++ nodes</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>libopencv-dev</depend>
  <depend>mapper_interfaces</depend>
  <depend>amr_interfaces</depend>
  <depend>waypoint_interfaces</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
