<?xml version="1.0"?>
<package format="3">
  <name>mapper_ui</name>
  <version>0.1.0</version>
  <description>SLAM Mapper PyQt5 UI</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>mapper_interfaces</depend>
  <depend>python3-pyqt5</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
