<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartographer_slam_3d</name>
  <version>0.0.1</version>
  <description>Cartographer 3D SLAM configuration package for Gazebo Pioneer2dx simulation</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cartographer_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
