<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtab_map_3d_config</name>
  <version>0.0.1</version>
  <description>RTAB-Map 3D SLAM configuration package (RGB Camera + 3D LiDAR)</description>
  <maintainer email="amap@todo.todo">amap</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rtabmap_launch</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>astra_camera</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rtabmap_util</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
